# fin_SDK

./: .gitignore  CMakeLists.txt  main  main.cpp
.cache/clangd/index/: RiskService.cpp.C7F96B150D00294B.idx  SummitAdapter.cpp.8A40EA3B661A02CE.idx  cli_parser.cpp.B60A2B7F106BD776.idx  domain.cpp.3E8BB6445E8A0E9C.idx  main.cpp.5C473F8CEBC35E92.idx  summit_sdk.cpp.7820E578DAE8DB90.idx
.github/workflows/: ci.yml
RiskApiGateway/: Program.cs  RiskApiGateway.http
RiskApiGateway/Controllers/: RiskController.cs
RiskApiGateway/Models/: RiskResultDto.cs  TradeDto.cs
RiskApiGateway/Properties/: launchSettings.json
adapter/: CMakeLists.txt  SummitAdapter.cpp  SummitAdapter.h
api/: CMakeLists.txt
data/: trades.json
domain/: CMakeLists.txt  RiskResult.h  Trade.h
sdk/: CMakeLists.txt  summit_sdk.cpp  summit_sdk.h
service/: CMakeLists.txt  RiskService.cpp  RiskService.h
tests/: CMakeLists.txt  RiskServiceTest.cpp  test_example.cpp
